--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
     "react-resizable-panels": "^4.0.16",
+    "react-use": "^17.6.0",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
+    "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
     "zod": "^4.2.1"
